 * #1796 (VonMisesFactory is missing)
 * #1803 (The API example of Experiment has a format issue)
 * #1805 (Brent's implementation has a stability issue)
 * #1807 (Beta::computeCharacteristicFunction is wrong if the lower bound is not zero)
 * #1815 (1.16 fails with dlib-cpp-19.22)
 * #1818 (Problem with wilksNumber)
 * #1820 (Incoherent results in LinearModelAnalysis)

== 1.16 release (2020-11-16) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm
 * Drop normalization & transformation handling in GeneralLinearModelAlgorithm
 * XML/H5 storage (hdf5 library)
 * C++11 requirement

==== New classes ====
 * BlockIndependentDistribution
 * FejerAlgorithm
 * GridLayout
 * MinimumVolumeClassifier
 * StationaryFunctionalCovarianceModel
 * XMLH5StorageManager

==== API changes ====
 * Removed deprecated Weibull, WeibullFactory, WeibullMuSigma classes
 * Removed deprecated GumbelAB class
 * Removed deprecated Event class
 * Removed deprecated EnumerateFunction constructors
 * Removed various deprecated distribution accessors
 * Deprecated Pairs class, see VisualTest.DrawPairs
 * Deprecated SORMResult::getEventProbabilityHohenBichler, use SORMResult::getEventProbabilityHohenbichler instead
 * Deprecated SORMResult::getGeneralisedReliabilityIndexHohenBichler, use SORMResult::getGeneralisedReliabilityIndexHohenbichler instead
 * Renamed SobolSequence::MaximumNumberOfDimension as SobolSequence::MaximumDimension
 * Added VisualTest::DrawLinearModel(linearModelResult), useful if the test is performed on the training samples
 * Added VisualTest::DrawLinearModelResidual(linearModelResult), useful if the test is performed on the training samples
 * Deprecated OptimizationResult::getLagrangeMultipliers
 * Moved OptimizationAlgorithm::computeLagrangeMultipliers to OptimizationResult
 * Added AIC & BestModelAIC static methods in FittingTest
 * Added AICC & BestModelAICC static methods in FittingTest