@@ -51,14 +51,14 @@ int main(int, char *[])
     Basis basis = LinearBasisFactory(inputDimension).build();
     // Case of a misspecified covariance model
     DiracCovarianceModel covarianceModel(inputDimension);
-    fullprint << "===================================================\n" << std::endl;
     GeneralLinearModelAlgorithm algo(X, Y, covarianceModel, basis);
     algo.run();
 
     GeneralLinearModelResult result = algo.getResult();
-    fullprint << "\ncovariance (dirac, optimized)=" << result.getCovarianceModel() << std::endl;
-    fullprint << "trend (dirac, optimized)=" << result.getTrendCoefficients() << std::endl;
-    fullprint << "===================================================\n" << std::endl;
+    Point ref = {0.1957};
+    assert_almost_equal(result.getCovarianceModel().getParameter(), ref, 1e-4, 1e-4);
+    ref = {-0.1109, 1.015};
+    assert_almost_equal(result.getTrendCoefficients()[0], ref, 1e-4, 1e-4);
     // Now without estimating covariance parameters
     basis = LinearBasisFactory(inputDimension).build();
     covarianceModel = DiracCovarianceModel(inputDimension);
@@ -66,10 +66,10 @@ int main(int, char *[])
     algo.setOptimizeParameters(false);
     algo.run();
     result = algo.getResult();
-    fullprint << "\ncovariance (dirac, not optimized)=" << result.getCovarianceModel() << std::endl;
-    fullprint << "trend (dirac, not optimized)=" << result.getTrendCoefficients() << std::endl;
-    fullprint << "===================================================\n" << std::endl;
-
+    ref = {1.0};
+    assert_almost_equal(result.getCovarianceModel().getParameter(), ref, 1e-4, 1e-4);
+    ref = {-0.1109, 1.015};
+    assert_almost_equal(result.getTrendCoefficients()[0], ref, 1e-4, 1e-4);
     // Case of a well specified covariance model
     // Test the optimization when the amplitude is deduced analytically from the scale
     {
@@ -77,26 +77,27 @@ int main(int, char *[])
       algo = GeneralLinearModelAlgorithm(X, Y, covarianceModel2, basis);
       algo.run();
       result = algo.getResult();
-      fullprint << "\ncovariance (reduced, unbiased)=" << result.getCovarianceModel() << std::endl;
-      fullprint << "trend (reduced, unbiased)=" << result.getTrendCoefficients() << std::endl;
-      fullprint << "===================================================\n" << std::endl;
+      ref = {0.1328, 0.1956};
+      assert_almost_equal(result.getCovarianceModel().getParameter(), ref, 1e-4, 1e-4);
+      ref = {-0.1034, 1.014};
+      assert_almost_equal(result.getTrendCoefficients()[0], ref, 1e-4, 1e-4);
       ResourceMap::SetAsBool("GeneralLinearModelAlgorithm-UnbiasedVariance", false);
       algo = GeneralLinearModelAlgorithm(X, Y, covarianceModel2, basis);
       algo.run();
       result = algo.getResult();
-      fullprint << "\ncovariance (reduced, biased)=" << result.getCovarianceModel() << std::endl;
-      fullprint << "trend (reduced, biased)=" << result.getTrendCoefficients() << std::endl;
-      fullprint << "===================================================\n" << std::endl;
+      ref = {0.1328, 0.1907};
+      assert_almost_equal(result.getCovarianceModel().getParameter(), ref, 1e-4, 1e-4);
+      ref = {-0.1034, 1.014};
+      assert_almost_equal(result.getTrendCoefficients()[0], ref, 1e-4, 1e-4);
       ResourceMap::SetAsBool("GeneralLinearModelAlgorithm-UseAnalyticalAmplitudeEstimate", false);
       algo = GeneralLinearModelAlgorithm(X, Y, covarianceModel2, basis);
       algo.run();
       result = algo.getResult();
-      fullprint << "\ncovariance (full optim)=" << result.getCovarianceModel() << std::endl;
-      fullprint << "trend (full optim)=" << result.getTrendCoefficients() << std::endl;
-      fullprint << "===================================================\n" << std::endl;
+      ref = {0.0102, 0.1908};
+      assert_almost_equal(result.getCovarianceModel().getParameter(), ref, 1e-4, 1e-4);
+      ref = {-0.111, 1.015};
+      assert_almost_equal(result.getTrendCoefficients()[0], ref, 1e-4, 1e-4);
     }
-    std::cout << "Test Ok" << std::endl;
-
   }
   catch (TestFailed & ex)
   {
